Add extra DLS stats in x-pack usage